# typomancy

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-package.yml
tests/: test_casters.py
typomancy/: __init__.py  handlers.py
